[package]
name = "sched_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
log = "0.4.14"
env_logger = "0.9.0"
petgraph = "0.6.3"
clap = { version = "4.2.4", features = ["derive"] }
lib = { path = "../lib"}
serde = "1.0.163"
serde_yaml = "0.9.21"
serde_derive = "1.0.163"