[package]
name = "basic_decomposition"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.3"
lib = { path = "../lib"}
clap = { version = "4.2.4", features = ["derive"] }

[dev-dependencies]
lib = { path = "../lib", features = ["test-helpers"] }

[features]
test-helpers = []