[package]
name = "rtcsa_dynfed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.3"
lib = { path = "../lib"}
rtss_cpc = { path = "../2020_RTSS_cpc_model_based_algorithm"}
log = "0.4.14"
env_logger = "0.9.0"
num-integer = "0.1"